--- a/StockData/StockMVC/Views/Home/Index.cshtml
+++ b/StockData/StockMVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="form-group">
             <label asp-for="Code" class="control-label col-md-2"></label>
             <div class="col-md-4">
-                <input asp-for="Code" class="form-control" placeholder="e.g. FB+MSFT+APPL" />
+                <input asp-for="Code" class="form-control" placeholder="e.g. FB+MSFT+AAPL" />
             </div>
             <span asp-for="Code"></span>
         </div>
