use G2 to add stack

--- a/StockData/StockMVC/Views/Shared/_Layout.cshtml
+++ b/StockData/StockMVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://as.alipayobjects.com/g/datavis/g2/1.2.2/index.js"></script>
 </head>
 <body>
 
