compare two stocks

--- a/StockData/StockMVC/Views/Shared/_Layout.cshtml
+++ b/StockData/StockMVC/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
     <script src="https://as.alipayobjects.com/g/datavis/g2/1.2.2/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://os.alipayobjects.com/rmsportal/UBXCMkzNVlaZYNs.css">
+    <script src="https://as.alipayobjects.com/g/datavis/g-plugin-range/0.0.6/index.js"></script>
 </head>
 <body>
 
